Added getAllAdmins, promoteUserToAdmin endpoints and its methods. Added missing getById method for users. Added missing endpoints to openapi specification. Minor fixes.
